removing old content

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4438,8 +4438,8 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.120.a:0 "We'll keep an eye on the central government."
  ottoman.121.t:0 "Loyalties Within the Committee"
  ottoman.121.d:0 "As a new autonomy in [FROM.capital.GetName] has been established by our fellow committee member [FROM.GetLeader], the matters in the region will be directly handled by the man himself. Due to the connection he has to the central party and the committee, many within the ruling positions of the state will turn a blind eye on his actions, even if its breaching the orders issued by the central state.\nWhat policies will he employ or how will his rule end up are questions we don't have an answer to yet. What we can decide right now is to either deal with the matters in the capital or to take a closer look into the developments in [FROM.capital.GetName]."
- ottoman.121.a:0 "Off to [FROM.capital.GetName] we go."
- ottoman.121.b:0 "We stand loyal to [347.GetName]."
+ ottoman.121.a:0 "We stand loyal to [347.GetName]."
+ ottoman.121.b:0 "Off to [FROM.capital.GetName] we go."
 
  ottoman.120.t:0 "Sects Mobilize"
  ottoman.120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
@@ -5072,10 +5072,6 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_ottoman.93.d: "In late 1909, we attache to us began a conversation with the Ottoman Navy about the possibility of selling our warships to Ottoman to counter Greek naval expansion. After lengthy negotiations, including Ottomans attempts to buy one or more of the new battlecruisers Von der Tann, Moltke, and Goeben, we offered to sell the four ships of the Brandenburg class at a cost of 10 million marks.\n\n[TUR.GetAdjective] chose to buy Kurfürst Friedrich Wilhelm and Weissenburg, since they were the more advanced ships of the class."
  ww1_ottoman.93.a: "This is how we get a good ally."
  ww1_ottoman.93.b: "No, we won't sell them."
- tur_british_ships_1914: "We'll receive two §Ybattleships§!, namely §YReşadiye§! and §YSultan Osman-ı Evvel§!"
- eng_british_ships_1914: "We'll receive two §Ybattleships§!, namely §YHMS Erin§! and §YHMS Agincourt§!"
- germany_transfers_ships: "§Y[GER.GetName]§! will transfer two of its §Ybattleships§!, namely §YSMS Kurfürst Friedrich Wilhelm§! and §YSMS Weissenburg§!"
- germany_transfers_ships2: "We'll transfer two of our §Ybattleships§!, namely §YSMS Kurfürst Friedrich Wilhelm§! and §YSMS Weissenburg§!"
  ww1_ottoman.94.t: "[GER.GetAdjective] Ships Arrived"
  ww1_ottoman.94.d: "Two German pre-dreadnought battleships, SMS Kurfürst Friedrich Wilhelm and SMS Weissenburg has arrived our ports. They will be renamed as Barbaros Hayreddin and Turgut Reis, and serve our navy."
  ww1_ottoman.94.a: "Now tell me Greeks, how about these ships?"
