--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2975,6 +2975,13 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_local_central_rule_central_high_control:0 "High Central Committee Influence"
  TUR_local_central_rule_central_medium_control:0 "Medium Central Committee Influence"
  TUR_local_central_rule_central_low_control:0 "Low Central Committee Influence"
+ TUR_committee_member_1_tt_modify:0 "Modify §YCommittee Member§! by:\n§ROur state will be annexed back into [TUR.GetNameDef] if we capitulate"
+ TUR_committee_member_2_tt_modify:0 "Modify §YCommittee Member§! by:\n§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 75%§!\n"
+ TUR_committee_member_3_tt_modify:0 "Modify §YCommittee Member§! by:\n§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 70%§!\n"
+ TUR_committee_member_4_tt_modify:0 "Modify §YCommittee Member§! by:\n§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 65%§!\n"
+ TUR_committee_member_5_tt_modify:0 "Modify §YCommittee Member§! by:\n§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 60%§!\n"
+ TUR_committee_member_6_tt_modify:0 "Modify §YCommittee Member§! by:\n§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 55%§!\n"
+ TUR_committee_member_7_tt_modify:0 "Modify §YCommittee Member§! by:\n§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 50%§!\n"
  TUR_appoint_liberals:0 "Appoint Liberals"
  TUR_appoint_conservatives:0 "Appoint Conservatives"
  TUR_denounce_war:0 "Denounce War"
