--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2950,6 +2950,9 @@ TUN_caid_administration_desc:0 "[TUN.getNameDef] is administered regionally by q
 TUN_resident_general_dictatorship:0 "Resident-General Dictatorship"
 TUN_resident_general_dictatorship_desc:0 "Although [TUN.getLeader] reigns officialy, the entire national administration is held by the Resident General Gabriel Alapetite. The relative autonomy of the protectorate remains only what the French are willing to grant us."
 
+TUN_mejba:0 "Mejba"
+TUN_mejba_desc:0 "The mejba or medjba is a per capita tax in force in Tunisia in the 17th century. Its exorbitant value makes it the country's largest tax revenue, collected only from provincial countries. If this tax allows a significant income, it remains profoundly unfair because it is exclusively aimed at farmers."
+
 MOR_resident_general_dictatorship:0 "Resident-General Dictatorship"
 MOR_resident_general_dictatorship_desc:0 "Resident General Hubert Lyautey is the true master of Morocco, deciding on matters of justice, defense, education and the economy. The Sultan [MOR.getName] is only a popular facade intended to avoid an anti-French revolution."
 
