--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -3571,6 +3571,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  TUN_abdekjelil_zaouche:0 "Abdeljelil Zaouche" 
  TUN_kahirullah_bin_mustapha:0 "Kahirullah Bin Mustapha"
  TUN_alsadek_zmerli:0 "Al-Sadek Zmerli"
+ TUN_sadok_ghileb:0 "Sadok Ghileb"
 
  # OTTOMAN EMPIRE / TURKEY
  TUR_prens_sabahattin:0 "Prens Sabahattin"
