--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -478,3 +478,4 @@
  bonaparte_legacy_louis:0 "Bonaparte Legacy"
  minister_of_national_defense:0 "Minister of National Defense"
  administration_reformer:0 "Administration Reformer"
+ TUR_only_one_governor_of_aleppo:0 "The government can only have one §YGovernor of Aleppo§!."
