--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -39,6 +39,9 @@ ww1_germanrework.1.t:0 "Germany's disgrace"
 ww1_germanrework.2.t:0 "Hollweg's replacement"
  ww1_germanrework.2.d:0 ""
  ww1_germanrework.2.a:0 "Appoint Karl Helferich"
+ww1_germanrework.19.t:0 "Factions in the Right"
+ ww1_germanrework.19.d:0 ""
+ ww1_germanrework.19.t:0 "The chancellor should tread with care"
 
 #1910 Strikes
 ww1_germanrework.3.t:0 "Strikes in Hamburg"
@@ -101,6 +104,16 @@ GER_election1:0 "Upcoming Reichstag Election"
 GER_election2:0 "Upcoming Reichstag Election"
 
 GER_reichstag_next_elections_category:0 "Predicted Election Results"
+
+#Balance of Power - Conservatives
+GER_conservatives_vs_nationalists:0 "Power Struggle in the Right-Wing"
+GER_conservatives_nationalists_balanced:0 "Complacent Factions"
+GER_balance_conservatives:0 "Conservatives"
+GER_balance_nationalists:0 "Nationalists"
+conservatives_dominant:0 "Conservatives Dominant"
+conservatives_content:0 "Conservatives Content"
+nationalists_dominant:0 "Nationalists Dominant"
+nationalists_content:0 "Nationalists Content"
 
 #Economic Actions
 GER_economic_actions:0 "Economic Actions"
