--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -478,4 +478,8 @@
  bonaparte_legacy_louis:0 "Bonaparte Legacy"
  minister_of_national_defense:0 "Minister of National Defense"
  administration_reformer:0 "Administration Reformer"
+ TUR_governor_of_aleppo_bekir_sami:0 "Governor of Aleppo"
+ TUR_governor_of_aleppo_hasan_mazhar:0 "Governor of Aleppo"
+ TUR_governor_of_aleppo_huseyin_kazim_kadri:0 "Governor of Aleppo"
+ TUR_governor_of_aleppo_abdulhalik_renda:0 "Governor of Aleppo"
  TUR_only_one_governor_of_aleppo:0 "The government can only have one §YGovernor of Aleppo§!."
