--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4440,6 +4440,14 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.121.d:0 "As a new autonomy in [FROM.capital.GetName] has been established by our fellow committee member [FROM.GetLeader], the matters in the region will be directly handled by the man himself. Due to the connection he has to the central party and the committee, many within the ruling positions of the state will turn a blind eye on his actions, even if its breaching the orders issued by the central state.\nWhat policies will he employ or how will his rule end up are questions we don't have an answer to yet. What we can decide right now is to either deal with the matters in the capital or to take a closer look into the developments in [FROM.capital.GetName]."
  ottoman.121.a:0 "We stand loyal to [347.GetName]."
  ottoman.121.b:0 "Off to [FROM.capital.GetName] we go."
+ ottoman.122.t:0 "Loyalties Within the Committee"
+ ottoman.122.d:0 "As a new autonomy in [FROM.capital.GetName] has been established by our fellow committee member [FROM.GetLeader], the matters in the region will be directly handled by the man himself. Due to the connection he has to the central party and the committee, many within the ruling positions of the state will turn a blind eye on his actions, even if its breaching the orders issued by the central state.\nWhat policies will he employ or how will his rule end up are questions we don't have an answer to yet. What we can decide right now is to either deal with the matters in the capital or to take a closer look into the developments in [FROM.capital.GetName]."
+ ottoman.122.a:0 "We stand loyal to [347.GetName]."
+ ottoman.122.b:0 "Off to [FROM.capital.GetName] we go."
+ ottoman.123.t:0 "Loyalties Within the Committee"
+ ottoman.123.d:0 "As a new autonomy in [FROM.capital.GetName] has been established by our fellow committee member [FROM.GetLeader], the matters in the region will be directly handled by the man himself. Due to the connection he has to the central party and the committee, many within the ruling positions of the state will turn a blind eye on his actions, even if its breaching the orders issued by the central state.\nWhat policies will he employ or how will his rule end up are questions we don't have an answer to yet. What we can decide right now is to either deal with the matters in the capital or to take a closer look into the developments in [FROM.capital.GetName]."
+ ottoman.123.a:0 "We stand loyal to [347.GetName]."
+ ottoman.123.b:0 "Off to [FROM.capital.GetName] we go."
 
  ottoman..120.t:0 "Sects Mobilize"
  ottoman..120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
