more content for break aways

--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1034,6 +1034,9 @@
  TUR_war_tax_desc:0 "Using war as an excuse, heavy taxes were imposed on the population. Yet the unpopularity of these taxes makes us beg the question if it's worth to keep it for long."
  TUR_committee_of_union_and_progress:0 "Committee of Union and Progress"
  TUR_committee_of_union_and_progress_desc:0 "İttihat ve Terakki Fırkası has established itself as a large party with wide reaching members. Though not all of it's members hold posts in the government, the unofficially retain power and influence the empire. The views and actions of certain individuals within the party shape the actions, thus the future of the empire."
+ TUR_the_regent_of_sultan:0 "The Regent of Sultan"
+ TUR_the_regent_of_sultan_desc:0 "Our leader, [ROOT.GetLeader], may have been appointed by the Central Committee to Syria, but he gains his legitimacy among the population as being the regent of sultan in these lands."
+ TUR_the_regent_of_sultan_instant_desc:0 "§RWill be removed if we're not subjected a country with an Ottoman Sultan either as a ruler or a public figure§!"
  TUR_committee_member:0 "Committee Member"
  TUR_committee_member_desc:0 "Since we're a committee member, our little enclave of an autonomous administration receives the support of the state. Yet the survival of our administration depends solely on the final decision of [347.GetName]."
  TUR_committee_member_1_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if we capitulate"
