--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10202,6 +10202,77 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
 
  toptani_coup_1913:0 "Toptani 1913 Coup Occured"
  
+ #tunisia, lol
+
+ TUN_demarcate_tunisian_lybian_border:0 "Demarcate Tunisian-Lybian Borders"
+ TUN_demarcate_tunisian_lybian_border_desc:0 "The border between Tunisia and Libya is currently being negotiated and should lead to the establishment of a clear boundary in the border area, extending over 460 km."
+
+ TUN_reform_the_consultative_council:0 "Reform the Consultative Council"
+ TUN_reform_the_consultative_council_desc:0 "The advisory council is currently composed of members elected by universal suffrage, almost exclusively French. To appease young Tunisians, the extension of the representative body from 45 to 56 seats was decided. These new members will only be Tunisian and elected for life."
+
+ TUN_preserve_the_italian_minority:0 "Preserve the Italian Minority"
+ TUN_preserve_the_italian_minority_desc:0 "The Italian minority is the largest in the country, well ahead of the French population. With some 150,000 official residents, they constitute a cheap workforce in direct competition with poor Tunisian workers, which makes them targets of discrimination by locals. We must reaffirm our support for this population by extending the Franco-Italian consular citizenship agreement."
+
+ TUN_end_the_consular_convention:0 "End the Consular Convention"
+ TUN_end_the_consular_convention_desc:0 "The settlement of Italian migrants is a real problem in Tunisia. Poor workers, they enter into direct competition with the indigenous working class, causing tension and violence. Tunisia's situation does not allow it to welcome the nearly 150,000 Italians on its soil, some of whom will have to leave the territory."
+
+TUN_sfax_olivier_plantation:0 "Sfax Olivier Plantation"
+TUN_sfax_olivier_plantation_desc:0 "The local government has financed a large investment in the north of the country, where fertile land allows the planting of olive trees. This first stage of production anchors the industrialization of Tunisia."
+
+TUN_support_melks:0 "Support Melks"
+TUN_support_melks_desc:0 "The Melks population represents the indigenous peasant caste, generally poor and politically inactive. It is the backbone of Tunisia and must receive substantial government support to develop."
+
+TUN_support_french_colons:0 "Support French Colons"
+TUN_support_french_colons_desc:0 "The French elite is powerful and influential. The continuation of our efforts at colonization and control of institutions must continue as part of a civilizing crusade."
+
+TUN_form_destour:0 "Form Destour"
+TUN_form_destour_desc:0 "Tunisia's destiny is to establish itself as an independent state. At least, that's what some Tunisian youth think. The government's position of supporting popular forces provoked a democratic momentum in the country leading to the formation of an organized autonomist political group."
+
+TUN_sadiki_high_school_reform_comission:0 "Sadiki Reform Comission"
+TUN_sadiki_high_school_reform_comission_desc:0 "The Tunisian education system is extremely fragile, the victim of strong discrimination and the absence of a common school program. In addition, teaching in Arabic is of a much lower quality than that in French, accentuating the educational gap among indigenous populations. Abdeljelil Zaouche is the cornerstone of this council, ultimately intended to reform the entire education system."
+
+TUN_fund_CGFT:0 "Fund CGFT"
+TUN_fund_CGFT_desc:0 "The Compagnie générale française de tramways (CGFT) and its sub-subsidiary (CTT) are one of the most flourishing industries in Tunisia. The state can invest in the capital of the company to ensure its development and the creation of new jobs."
+
+TUN_negociate_income_tax_reform:0 "Negociate Income Tax Balance"
+TUN_negociate_income_tax_reform_desc:0 "The current amount of the mejba amounts to 25 francs, a very significant sum for the most vulnerable Tunisian citizens. [FRA.getLeader] has therefore decided to validate a reform proposed by the advisory council aimed at reducing the amount of the mejba to 18 francs."
+
+TUN_arabize_the_tunisien:0 "Arabize \"The Tunisien\""
+TUN_arabize_the_tunisien_desc:0 "In order to provide more equitable access to information, the Tunisian youth movement decided, under the aegis of Ali Bach Hamba, to propose the translation of the newspaper "Le tunisien" into Arabic in order to disseminate it to as many people as possible."
+
+TUN_djellaz_cimetery_protection_act:0 "Djellaz Cimetery Protection Act"
+TUN_djellaz_cimetery_protection_act_desc:0 "The Djellaz cemetery is the victim of numerous thefts. Looters invade the cemetery at night and pillage the graves to steal valuable objects. the government decided to act by registering the cemetery as state property, thus allowing its legal protection."
+TUN_djellaz_cimetery_protection_act_cancelled:0 "Djellaz Cimetery Protection Act Cancelled"
+
+TUN_sponsor_goudchaux_brunshwicg_work:0 "Sponsor Goudchaux - Brunschwicg Work"
+TUN_sponsor_goudchaux_brunshwicg_work_desc:0 "The League for Human and Citizen's Rights proposes to publish a brochure entitled "Arbitrariness in Tunisia" written following the investigation of one of its members, the lawyer Goudchaux-Brunschwicg. The author denounces the scandal of the spoliation of Tunisian land, many of which benefit politicians. Some, such as Georges Cochery, Joseph Chailley, Léon Mougeot, Alphonse Pedebidou or Henry Boucher, were even rapporteurs for the Tunisian budget, which fuels the accusation of conflicts of interest."
+
+TUN_ban_the_tunisien:0 "Ban Arabic Press"
+TUN_ban_the_tunisien_desc:0 "The political positions of the newspaper "Le tunisien" are unacceptable for the general government. Consequently, this press, like all press written in Arabic, must simply be banned."
+
+TUN_balance_ctt_employement_rate:0 "Balance CTT Employement Rate"
+TUN_balance_ctt_employement_rate_desc:0 "In order to appease the Arab populations, the government decided to rebalance the employment rate of natives within the Tunis tram company (CTT) by establishing a ceiling limiting the number of ethnic Italians in the company to 30%. business."
+
+TUN_reshuffle_the_confrence_consultative:0 "Reshuffle the Consultative Council"
+TUN_reshuffle_the_confrence_consultative_desc:0 "Part of the consultative assembly is made up of proven Tunisian independence nationalists. Their expulsion is necessary to restore a semblance of stability in the council."
+
+TUN_end_the_mejba:0 "End the Mejba"
+TUN_end_the_mejba_desc:0 "The Mejba is an extremely heavy tax for the Tunisian population, so the advisory council proposes to transform it into a set of separate taxes, the main one of which would be the "Al istitan". This is due by any male person domiciled in Tunisia and aged over twenty; only Tunisian and French soldiers are exempt."
+
+TUN_form_the_tunisian_contingent:0 "Form the Tunisian Contingent"
+TUN_form_the_tunisian_contingent_desc:0 "The metropolis demands that 26,000 Tunisian natives and 9,000 French settlers be mobilized as part of the agreement's mobilization plan. Thus, we must constitute an armed force of Tunisian shooters intended to support the interests of France."
+TUN_contingent_formation:0 "Deploy §Y3 divisions§! with §Y4 Infantry batallions§! with §Yartillery, recon and engineer support§! in §Y[458.GetCapitalVictoryPointName]§!."
+TUN_order_of_battle:0 "§COrder of Battle :§!\n    - 4e régiment de tirailleurs tunisiens\n    - 8e régiment de tirailleurs tunisiens\n    - 4e régiment mixte de zouaves et tirailleurs"
+
+TUN_expand_local_conscription:0 "Expand Local Conscription"
+TUN_expand_local_conscription_desc:0 "The war requires us to mobilize more troops, even if the indigenous population opposes it. To do this, the mobilization of classes beyond the seventh, for example up to the tenth, mechanically allows more soldiers to be mobilized. The government therefore proposes the call of classes 1903 to [Date.getYear]"
+
+TUN_french_military_supplies:0 "French Military Supplies"
+TUN_french_military_supplies_desc:0 "Supplying the garrisons of Tunisia requires constant efforts which can only be ensured by the establishment of a production chain in mainland France, the products of which will then be transported to Africa."
+
+cancel_focus:0 "§YCancel Focus :§!"
+skip_focus:0 "§YSkip Focus :§!"
+
  #Northwestern army
  NWA_with_german_support: "Military Aid From Germany"
  NWA_with_german_support_desc: "The Germans have agreed to provide us weapons to help us take Petrograd. In exchange the Germans expect us to establish pro-German government in Petrograd after we capture it."
