--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4417,6 +4417,7 @@
  TUR_lessons_of_the_picardie_maneuvers:0 "Lessons of the Picardie Maneuvers"
  TUR_lessons_of_the_picardie_maneuvers_desc:0 "Between 12th - 18th September, French Army, under the leadership of General Foch, held massive military exercises in Picardie. Major Selahaddin Bey and Captain Mustafa Kemal participated in these exercises and obtained valuable information regarding modern warfare. We should use this experience to modernise our army doctrine."
  TUR_lessons_of_the_picardie_maneuvers_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\nArmy Experience Gain: §G+10%§!\n\n"
+ TUR_picardie_maneuvers:0 "Picardie Maneuvers"
  TUR_call_for_the_balkan_war:0 "Call for the Balkan War"
  TUR_call_for_the_balkan_war_desc:0 "There were rumors about a joint invasion of our Balkan territories by the other Christian Balkan nations. But we didn't guess it'd happen this soon. We might be unprepared, or even outnumbered; but our brave soldier won't surrender our lands to these filthy backstabbers."
  TUR_call_for_the_balkan_war_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\n£manpower_texticon  Recruitable Population Factor: §G5%§!\n£political_violence_gain_enemy_texticon  Resistance Growth Speed in our states occupied by the enemy: §G+10%§!\n\n"
