will add the rest later
only the border war remains and a couple more of events cause I am feeling sick rn

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -3077,6 +3077,8 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  SAU_Ahmed_bin_Abdullah_Al_Thanyan_Al_Saud: "Ahmed Al Thanyan Al Saud"
  SAU_said_kurdi: "Said Al Kurdi"
  SAU_Turki_bin_Abdulaziz: "Turki Bin Abdulaziz"
+ SAU_Saud_bin_Abdullah_bin_Jilwi_Al_Saud: "Saud bin Abdullah bin Jilwi Al Saud"
+ SAU_Abdullah_bin_Jilwi_Al_Saud: "Abdullah bin Jilwi Al Saud"
  SAU_abdul_mohsen_al_faram: "Abdul Mohsen Al Faram"
  SAU_Rashid_bin_Layla: "Rashid Bin Layla"
  SAU_Hamza_Ghoth: "Hamza Ghoth"
