--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -3572,6 +3572,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  TUN_kahirullah_bin_mustapha:0 "Kahirullah Bin Mustapha"
  TUN_alsadek_zmerli:0 "Al-Sadek Zmerli"
  TUN_sadok_ghileb:0 "Sadok Ghileb"
+ TUN_abdelaziz_thaalbi:0 "Abdelaziz Thâalbi"
 
  # OTTOMAN EMPIRE / TURKEY
  TUR_prens_sabahattin:0 "Prens Sabahattin"
