--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14735,3 +14735,15 @@ FRA_law_soon:0 "§GA law will be proposed soon by the §YParliament§! to addres
  ww1_france.479.t:0 "Equipment Shipments to Tunisia"
  ww1_france.479.d:0 "Due to the mobilization of indigenous Tunisian conscriptions, the government of [TUN.getLeader] requested the routing of part of the metropolitan production to Tunisia. Thus, regular exports are now planned, intended to equip this new branch of the army."
  ww1_france.479.a:0 "Excellent."
+
+ ww1_france.480.t:0 "Jaurès Support to Tunisian Independance"
+ ww1_france.480.d:0 "Following the Couitéas affairs, the publication of "The arbitrary in Tunisia" and "The sweat of the burnous", the parliament was paralyzed by the Tunisian question, in particular by the interventions of Jean Jaurès, leader of the SFIO and great supporter of decolonization. His party has shown solidarity with the Tunisian national cause, supporting local independence movements such as “Young Tunisians”. Their interference promises to further complicate our affairs in North Africa..."
+ ww1_france.480.a:0 "Concerning..."
+
+ ww1_france.481.t:0 "La Tunisie Martyre"
+ ww1_france.481.d:0 "Abdelaziz Thâalbi and Ahmed Sakka wrote a manifesto \"Tunisia Martyrdom\" containing the project for the constitutionalization of Tunisia (in Arabic \"destour\"). This basis is the most concrete and credible for the legislative construction of a Tunisian republic. This work goes against French colonial interests, Tunisia representing a profitable financial windfall."
+ ww1_france.481.a:0 "Emprison him!"
+
+ ww1_france.482.t:0 "La Tunisie Martyre"
+ ww1_france.482.d:0 "The French reaction to the manifesto was not long in coming... Abdelaziz Thâalbi was imprisoned based on the statements in his work for "undermining the security of the state". But his legacy will not be forgotten, the fight for freedom continues. Ahmed Essafi and Salah Farhat, close collaborators, promised to continue his work."
+ ww1_france.482.a:0 "They wont stop until Tunisia is free"
