--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10270,6 +10270,12 @@ TUN_expand_local_conscription_desc:0 "The war requires us to mobilize more troop
 TUN_french_military_supplies:0 "French Military Supplies"
 TUN_french_military_supplies_desc:0 "Supplying the garrisons of Tunisia requires constant efforts which can only be ensured by the establishment of a production chain in mainland France, the products of which will then be transported to Africa."
 
+TUN_contact_the_left_cartel:0 "Contact the Left Cartel"
+TUN_contact_the_left_cartel_desc:0 "Radical socialist left forces support the idea of decolonization of North Africa. Such a project corresponds to the expectations of Tunisian democrats wishing to take control of their own destiny. The Tunisian cause must reach the ears of SFIO parliamentarians, one way or another."
+
+TUN_la_tunisie_martyr:0 "La Tunisie Martyre"
+TUN_la_tunisie_martyr_desc:0 "Abdelaziz Thâalbi and Ahmed Sakka wrote a manifesto "Tunisia Martyrdom" containing the project for the constitutionalization of Tunisia (in Arabic "destour"). This basis is the most concrete and credible for the legislative construction of a Tunisian republic."
+
 cancel_focus:0 "§YCancel Focus :§!"
 skip_focus:0 "§YSkip Focus :§!"
 
