--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -144,6 +144,7 @@
  autonomist:0 "Autonomist"
  cheikh_el_medina:0 "Cheikh El Médina"
  destour_support:0 "Destour Supporter"
+ panarab_nationalist:0 "Pan-Arab Nationalist"
  TUR_leftist_parliament:0 "Leftist Parliament"
  TUR_milliyetci_sosyalist_advisor:0 "Nationalist Socialist"
  TUR_milliyetci_sosyalist:0 "Nationalist Socialist"
