--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -13434,6 +13434,21 @@ gre_we_shall_not_perish: "We Shall Not Perish"
  ww1_nejd.42.t: "Second Saudi-Rashidi War"
  ww1_nejd.42.d: "The Great War casts its shadow over Arabia, where Ibn Saud's forces are currently engaged in fierce battles with Rashidi troops along the border. This conflict marks a pivotal moment in the region's history, as both sides vie for control amidst the backdrop of global conflict. The outcome of these clashes will not only shape the immediate landscape of Arabian politics but also influence the trajectory of alliances and power dynamics across the broader Middle East. As Abdulaziz Al Saud maneuvers his forces strategically, the repercussions of these confrontations resonate deeply, signaling potential shifts in regional power structures and geopolitical alignments"
  ww1_nejd.42.a: "Great another conflict"
+
+ ww1_nejd.43.t: "Ibn Suwait Incident"
+ ww1_nejd.43.d: "Following his victory over a faction of the Al-Hazaznah tribe in the town of Al-Hariq, Abdulaziz Al Saud successfully suppressed their rebellion. Abdulaziz Al Saud received a letter from Sheikh Mubarak Al-Sabah, urging him to attack Ibn Suwaid. However, Sheikh Mubarak secretly sent a warning to Ibn Suwaid, who then fled. Abdulaziz redirected his forces through Zubair and then onto Kabda, continuing towards Sufran. During this march, Abdulaziz encountered a delegation led by Abdulaziz bin Hassan, an envoy from Sheikh Mubarak Al-Sabah, who came to offer apologies on behalf of Sheikh Mubarak. Abdulaziz accepted the apology without harboring any grievances, demonstrating his diplomatic acumen. He then led his forces back to the outskirts of Al Ihsa'a."
+ ww1_nejd.43.a: "Good"
+
+ ww1_nejd.44.t: "Al Majasa Battle" #معركة المجصة
+ ww1_nejd.44.d: "Abdulaziz Al Saud launched an attack on the Sufran tribe in the outskirts of Al-Ahsa, clashing with Khamis bin Munikhir in a location known as Al-Majasa. Joined by Sheikh Faisal bin Suhub and a group from his Za’ab tribe, they fought a fierce battle against the Ajman and Sufran tribes near a castle and palm groves south of Al-Tarf in Al-Ahsa. The conflict resulted in a decisive victory for Abdulaziz, with significant casualties inflicted on the opposing tribes."
+ ww1_nejd.44.a: "Horray"
+ ww1_nejd.45.t: "Al Ruwidah Meeting"
+ ww1_nejd.45.d: "In response to the deteriorating situation in Al Ihsa'a, a significant meeting took place at the home of Mohammed bin Omar Al-Mulla in Al-Kut. Present at the meeting were Mohammed bin Ahmed Al-Mulla, Abdullah bin Abdul-Latif Al-Mulla, Abdulrahman Al-Jughayman Al-Tamimi, and Abdul-Latif bin Ahmed Al-Jughayman Al-Tamimi. They discussed the dire state of affairs in Al Ihsa'a and concluded that the only way to bring stability to the region was to invite Abdulaziz. They drafted a letter detailing the country's plight and the prevailing unfavorable conditions, emphasizing that these circumstances presented an opportune moment for Abdulaziz to intervene and expel the Ottoman presence. They pledged their support and assistance in enabling him to enter Al-Kut and establish his rule. The letter was sealed with the approval of the Mufti, Sheikh Abdul-Latif bin Abdulrahman Al-Mulla, and sent to King Abdulaziz in Riyadh."
+ ww1_nejd.45.a: "Splendid"
+
+ ww1_nejd.46.t: "Battle for Al Ihsa'a" 
+ ww1_nejd.46.d: "Abdulaziz entered Al-Ihsa according to the plan. The young men from the Al-Mullah family showed the way, splitting into three groups: one to arrest the governor, one to guard the towers, and the rest to join Abdulaziz's main army. The plan went smoothly, and Abdulaziz, along with his sons and his Jilwi cousins, paraded triumphantly across Al-Kut and Al-Ihsa."
+ ww1_nejd.46.a: "Horray"
  # AZERBAIJAN
  ww1_azerbaijan.1.t: "Baku Commune"
  ww1_azerbaijan.1.d: "Bolshevik and Left Socialist Revolutionary (SR) established the commune in the city of Baku. It came to power after the bloody confrontation with the Muslim population, known as the [GetMonth] Days in Baku."
