--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4790,7 +4790,7 @@
  TUR_fund_european_universities_desc:0 "There are many French, British, German, Italian and American private schools already present in our empire, providing education that's up to modern standards. By expanding them, we can increase literacy."
  TUR_decentralize_the_economy:0 "Decentralize the Economy"
  TUR_decentralize_the_economy_desc:0 "Industrial expansion through centralized state control costs a lot of time and resource. If we decentralize this process and let every state industrialize with their own resources, we can achieve greater pace of industrialization."
- TUR_decentralize_the_economy_tt:0 "\nFor now and so often, §Yevery state without any civilian or military factories§! will get a modifier that will increase §Yconstruction speed§! in them."
+ TUR_decentralize_the_economy_tt:0 "\nEvery so often, states without any §YCivilian Factories§! or §YMilitary Factories§! will get a modifier that will increase §YConstruction Speed§! in them."
  TUR_endorse_agricultural_economic_model:0 "Endorse Agricultural Economic Model"
  TUR_endorse_agricultural_economic_model_desc:0 "In contrast to European industrial powerhouses, our empire still predominantly an agrarian state. Instead of disregarding our agrarian base, we can focus and benefit from it."
  TUR_endorse_agricultural_economic_model_tt:0 "Add §YAgrarian Economy§! which grants:\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-20.0%§!\n£supply_consumption_texticon  Supply Consumption: §G-10.0%§!\n"
