--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2975,7 +2975,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_local_central_rule_central_high_control:0 "High Central Committee Influence"
  TUR_local_central_rule_central_medium_control:0 "Medium Central Committee Influence"
  TUR_local_central_rule_central_low_control:0 "Low Central Committee Influence"
- TUR_committee_member_1_tt_modify:0 "Modify §YCommittee Member§! by:\n§ROur state will be annexed back into [TUR.GetNameDef] if we capitulate"
+ TUR_committee_member_1_tt_modify:0 "Modify §YCommittee Member§! by:\n§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 80%§!\n"
  TUR_committee_member_2_tt_modify:0 "Modify §YCommittee Member§! by:\n§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 75%§!\n"
  TUR_committee_member_3_tt_modify:0 "Modify §YCommittee Member§! by:\n§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 70%§!\n"
  TUR_committee_member_4_tt_modify:0 "Modify §YCommittee Member§! by:\n§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 65%§!\n"
