--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4448,6 +4448,9 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.123.d:0 "As a new autonomy in [TRD.capital.GetName] has been established by our fellow committee member [TRD.GetLeader], the matters in the region will be directly handled by the man himself. Due to the connection he has to the central party and the committee, many within the ruling positions of the state will turn a blind eye on his actions, even if its breaching the orders issued by the central state.\nWhat policies will he employ or how will his rule end up are questions we don't have an answer to yet. What we can decide right now is to either deal with the matters in the capital or to take a closer look into the developments in [TRD.capital.GetName]."
  ottoman.123.a:0 "We stand loyal to [347.GetName]."
  ottoman.123.b:0 "Off to [TRD.capital.GetName] we go."
+ ottoman.124.t:0 "End of the Committee Struggle"
+ ottoman.124.d:0 "Though we've gained our vast autonomous rule in the region through our connections in the central committee, our rule no longer depends on them. As we're no longer subjected to their rule, nor our power depends on their approval, we no longer need to have a balancing game between our influences. Only influence participated will the the one done by us."
+ ottoman.124.a:0 "We are our own committee."
 
  ottoman..120.t:0 "Sects Mobilize"
  ottoman..120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
