--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1039,7 +1039,7 @@
  TUR_the_regent_of_sultan_instant_desc:0 "§RWill be removed if we're not subjected a country with an Ottoman Sultan either as a ruler or a public figure§!"
  TUR_committee_member:0 "Committee Member"
  TUR_committee_member_desc:0 "Since we're a committee member, our little enclave of an autonomous administration receives the support of the state. Yet the survival of our administration depends solely on the final decision of [347.GetName]."
- TUR_committee_member_instant_desc:0 "§RWill be removed if we're not a subject of [TUR.GetNameDef]§!"
+ TUR_committee_member_instant_desc:0 "\n§RWill be removed if we're not a subject of the Ottomans§!"
  TUR_committee_member_1_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 80%§!"
  TUR_committee_member_2_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 75%§!"
  TUR_committee_member_3_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 70%§!"
