--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1160,6 +1160,18 @@ USA_aviation_service:0 "Aviation Service"
 USA_anti_corruption_campaign:0 "Anti Corruption Campaign"
 USA_firmly_progressive_mission:0 "Progressive Fever Amongst The Administration"
 USA_farm_loans_idea:0 "Farm Loans"
+new_nationalism_railway:0 "Modify §YNew Nationalism§! by:\nConsumer Goods Factories factor: §Y3.0%§!\nStability: §G+2.00%§!"
+
+
+weekly_war_support_home_front:0 "Modify §YThe Home Front§! by\nWeekly War Support: §G+0.10%§!"
+east_home_front:0 "Modify §YThe Home Front§! by\nFactory Output: §G+10.00%§!"
+4_men_home_front:0 "Modify §YThe Home Front§! by\nWar Support: §G+15.00%§!\nMobilization Speed: §G+10.00%§! "
+home_front_event.t:0 "Add §YThe Home Front§! which grants (War Support: §R-10.00%§!, Stability: §R-5.00%§!, Division Organization: §R-5.0%§!, Division Organization Regain: §R-5.00%§!)"
+USA_domestic_front:0 "The Home Front"
+ USA_the_committee_on_public_information:0 "Committee on Public Information"
+USA_attract_people_east:0 "Attract People to War Industries in the East"
+USA_4_minute_men:0 "4 Minute Men"
+
 rad.tt:0 "Every 180 days we will get the event '§YFood Surpluses Increase§!'. \nBuilding up food surpluses will certainly come with §Gbenefits§! once the United States joins The Great War."
 USA_rural_price_controls:0 "Agricultural Price Supports"
 USA_rural_price_controls_desc:0 "We must ensure a stable market for our farmers, and agricultural price supports is just the way to do this. Setting fair maximum and minimum prices will ensure a fair playing field in the agricultural market, while offering to buy up surplus agricultural production will ensure that farmers produce as much as they can."
