--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8962,3 +8962,6 @@ FRA_is_refunding_60_tanks_plus_extra_desc:0 "We have not fulfilled the terms of 
 FRA_is_redundings_tanks:0 "Is Refunding a Tank Contract"
 
 FRA_is_being_refunded_plus_extra:0 "Is Being Refunded by France"
+
+german_region_alsace_lorraine:0 "§Y[28.getName]§!"
+german_region_alsace_lorraine_desc:0 "§Y[28.getName]§! has §Y3 Votes§! in the §YBundesrat§!."
